--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
